SWU-115 - Fixed some minor alignment issues on mobile

--- a/swinburne-aem-prototype/source/sut/scss/components/placeholders/_list.scss
+++ b/swinburne-aem-prototype/source/sut/scss/components/placeholders/_list.scss
@@ -79,6 +79,10 @@
   }
 
   // Normalize the list when the 'carousel' module is applied
+  @extend %component-list-carousel;
+}
+
+%component-list-carousel {
   @include not-aem-author {
     &[data-modules*='carousel'] {
       max-width: 100%;
