--- a/swinburne-aem-prototype/source/sut/scss/override/_card.scss
+++ b/swinburne-aem-prototype/source/sut/scss/override/_card.scss
@@ -6,6 +6,7 @@
 
 .card {
   box-shadow: 0 2px 3px color('grey-4');
+  height: 100%;
   margin-bottom: 0;
   width: 100%;
 
@@ -111,9 +112,5 @@
   // Background variations
   .bg-yellow & {
     box-shadow: 0 2px 3px #f3c26d;
-  }
-
-  @include media-breakpoint-up(md) {
-    height: 100%;
   }
 }
